# trueskill-cpp

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md
cmake/: skill_rating_cppConfig.cmake.in
docs/: api.md  cli.md  design.md  example.md  http.md  internals.md
include/skill_rating/: skill_rating.hpp
include/trueskill/: trueskill.hpp
src/: skill_rating.cpp  trueskill.cpp
src/app/: commands.cpp  commands.hpp  json.cpp  json.hpp
src/cli/: main.cpp
src/detail/: factor_graph.cpp  factor_graph.hpp  math.cpp  math.hpp
src/http/: main.cpp
tests/: cli_smoke.sh  http_smoke.sh  package_install_smoke.sh  skill_rating_tests.cpp  trueskill_tests.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
